--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <!-- Скрипт для получения данных -->
   <sctipt>
-    const apiUrl = "Моя ссылка"
+    const apiUrl = "qweqwe.lovestoblog.com"
 
     fetch(apiUrl)
       .then(response => response.json())
